updated timed text page to link to html5 spec
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@582 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/tests/Player_Timed_Text.html
+++ b/tests/Player_Timed_Text.html
@@ -168,8 +168,8 @@ Click on the little lower right "CC" icon to expose the timed text
 		</td>
 		
  		<td valign="top">
- 			<h4>iText inline embed example</h4>
- 			see: <a href="http://www.annodex.net/~silvia/track/elephant_no_skin_v2.html">Video Player Accessibility</a>
+ 			<h4>Text track inline embed example</h4> 			
+ 			see: <a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/video.html#the-track-element">HTML5 timed text spec</a>
  			<br><textarea id="inlineTracksTextArea" style="width:600px;height:180px">
 
  	</textarea>  
