--- a/modules/MediaRss/tests/Player_MediaRss.html
+++ b/modules/MediaRss/tests/Player_MediaRss.html
@@ -2,14 +2,13 @@
 <head>
 <title> MediaRss player </title>
 
-
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>  
-
+<script type="text/javascript" src="../../../jsScriptLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
+<script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>  
 <script type="text/javascript" src="../mwEmbed/mwEmbedLoader.js"></script>  
 <script type="text/javascript" src="../mwEmbed/mwEmbed.js?debug=true>"></script>  
-<script type="text/javascript" src="../mwEmbed/jsScriptLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 
+ 
 -->
   
 <script type="text/javascript">
