--- a/modules/MediaRss/tests/Player_MediaRss.html
+++ b/modules/MediaRss/tests/Player_MediaRss.html
@@ -2,12 +2,14 @@
 <head>
 <title> MediaRss player </title>
 
-<script type="text/javascript" src="../../../jsScriptLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
+<script type="text/javascript" src="../../../mwEmbedLoader.js"></script>  
+
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
 <script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>  
 <script type="text/javascript" src="../mwEmbed/mwEmbedLoader.js"></script>  
 <script type="text/javascript" src="../mwEmbed/mwEmbed.js?debug=true>"></script>  
+<script type="text/javascript" src="../../../jsScriptLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
  
 -->
   
