* sync with updated name ( resource, rather than script ) changes from mediaWiki svn.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@677 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/tests/Firefogg_GUI.html
+++ b/tests/Firefogg_GUI.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Firefogg - Make Ogg Video in your Browser</title>
-	 <script type="text/javascript" src="../jsScriptLoader.php?class=window.jQuery,mwEmbed"></script>    
+	 <script type="text/javascript" src="../ResourceLoader.php?class=window.jQuery,mwEmbed"></script>    
 	 <!--<script type="text/javascript" src="../mwEmbed.js?debug=true"></script> -->
 <style type="text/css" media="all">
 body {
@@ -94,7 +94,7 @@ Note: Your video file will be locally encoded and not upload to any server
 	</div>
 	
 	<div style="height:300px;"></div>
-	<center><span style="font:size:80%">Built using <a href="http://firefogg.org">firefogg</a>, <a href="http://www.mediawiki.org/wiki/Media_Projects_Overview#MwEmbed">MwEmbed</a> and <a href="http://jqueryui.com/">jquery.ui</a>. Supports  
+	<center><span style="font:size:80%">Built using <a href="http://firefogg.org">firefogg</a>, <a href="http://www.mediawiki.org/wiki/Media_Projects_Overview#MwEmbed">MwEmbed</a> and <a href="http://jqueryui.com/">jQuery UI</a>. Supports  
 		custom themes via the <a href="http://jqueryui.com/themeroller/developertool/">ThemeRoller Dev Tool</a>
 	</span>
 	</center>
