* stubs for playlist fallforward support * renamed MediaRss to "playlist" to support a more abstract playlist representation. * sync with mwEmbed updates, added test files and removed renamed modules
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@747 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Playlist/tests/Player_MediaRss.html
+++ b/modules/Playlist/tests/Player_MediaRss.html
@@ -3,29 +3,31 @@
 <title> MediaRss player </title>
 
 <script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>
+
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.js"></script>    
 <script type="text/javascript" src="../mwEmbed/mwEmbedLoader.js"></script>  
 <script type="text/javascript" src="../mwEmbed/mwEmbed.js?debug=true>"></script>  
-<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
- 
+<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 
 -->
   
 <script type="text/javascript">
 	// For testing safari in chrome / 
 	if( document.URL.indexOf('forceMobileSafari') != -1 ){		
 		mw.setConfig( 'forceMobileSafari' , true );
-	}	
+	}
 		
 	mw.ready(function(){	
-		$j('#mediaRssTarget').mediaRssPlayer({
+		$j('#mediaRssTarget').playlist({
 			'src' : "kalturaInterviewPlaylist.xml",
+			'type' : 'application/rss+xml',
 			'layout' : 'vertical'
 		});
 		
-		$j('#mediaRssTargetHorizontal').mediaRssPlayer({
+		$j('#mediaRssTargetHorizontal').playlist({
 			'src' : "kalturaInterviewPlaylist.xml",
+			'type' : 'application/rss+xml',
 			'layout' : 'horizontal'
 		})
 	});
