--- a/modules/KalturaSupport/tests/FallForward.html
+++ b/modules/KalturaSupport/tests/FallForward.html
@@ -50,7 +50,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1278527685/wid/_301982/u
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1278527685/wid/_301982/uiconf_id/48130/entry_id/0_sskv9qe8" />
 	<a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> <a rel="media:thumbnail" href="http://cdn.kaltura.com/p/301982/sp/30198200/thumbnail/entry_id/0_sskv9qe8/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="Jim_Slater.flv" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /><span property="media:duration" content="{DURATION}" /> 
 </object></p>
---> 
+
 <p>
 <object id="kaltura_player" 
 name="kaltura_player" 
@@ -73,7 +73,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1278527928/wid/_301982/u
 	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1278527928/wid/_301982/uiconf_id/1847722" />
 	<a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a>  
 </object></p>  
-
-
+-->
+<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1279111658/wid/_243342/uiconf_id/48132" data="http://www.kaltura.com/index.php/kwidget/cache_st/1279111658/wid/_243342/uiconf_id/48132"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="playlistAPI.autoContinue=true&playlistAPI.autoInsert=true&playlistAPI.kpl0Name=Recent Sea Videos&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_ha6mjy1o&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1279111658/wid/_243342/uiconf_id/48132" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> {SEO} </object>
 </body>
 </html>
