some fixes for moblie safari playlist sync with mwEmbedStandAlone updates
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@840 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FallForward.html
+++ b/modules/KalturaSupport/tests/FallForward.html
@@ -1,14 +1,13 @@
 <html>
 <head>
 <title>Fall forward html5</title>
-
-<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>  
+<script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>  
 
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
-<script type="text/javascript" src="http://html5.kaltura.org/js"></script>  
-<script type="text/javascript" src="../mwEmbed/mwEmbed.js?debug=true>"></script>
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>  
+<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
+<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>    
+
 -->
   
 <script type="text/javascript">
@@ -58,11 +57,11 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1278527685/wid/_301982/u
 <p><object id="kaltura_player" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="740" height="330" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" /><param name="flashvars" value="&amp;" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="740" height="330" src="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" allowfullscreen="true" name="kaltura_player"></embed></object></p>
  -->
 <h2><span style="color: #000080;"><span style="text-decoration: underline;"><strong>AGILITY DRILLS</strong></span></span></h2>
-<p><object id="kaltura_player" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="740" height="330" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" /><param name="flashvars" value="&amp;" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="740" height="330" src="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" allowfullscreen="true" name="kaltura_player"></embed></object></p>
-
+<p><object id="kaltura_player" name="kaltura_player" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="740" height="330" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" /><param name="flashvars" value="&amp;" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="740" height="330" src="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" allowfullscreen="true" name="kaltura_player"></embed></object></p>
+<!--  
 <h2><span style="text-decoration: underline;"><strong><span style="color: #000080;">TEST SINGLE PLAYLIST</span></strong></span></h2>
 <p><object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="620" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1280865484/wid/_301982/uiconf_id/1978022" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280865484/wid/_301982/uiconf_id/1978022"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="playlistAPI.autoContinue=true&#038;playlistAPI.autoInsert=true&#038;playlistAPI.kpl0Name=L1W1&#038;playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D301982%26subp_id%3D30198200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_2x9nbmro&#038;" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280865484/wid/_301982/uiconf_id/1978022" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> {SEO} </object></p>
-<!--  
+
 	
 <p>
 <object id="kaltura_player" 
