improved support for rss style flash playlist rewrite
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@864 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FallForward.html
+++ b/modules/KalturaSupport/tests/FallForward.html
@@ -30,7 +30,7 @@
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowfullscreen="true" allownetworking="all" allowscriptaccess="always" height="348" width="556" data="http://www.kaltura.com/index.php/kwidget/cache_st/1271290682/wid/_99522/uiconf_id/1507562">
 <param name="allowFullScreen" value="true"><param name="allowNetworking" value="all">
 <param name="allowScriptAccess" value="always"><param name="bgcolor" value="#000000">
-<param name="flashVars" value="playlistAPI.autoContinue=true&amp;playlistAPI.autoInsert=true&amp;playlistAPI.autoPlay=true&amp;playlistAPI.kpl0Url=http://rmwms.com/v/rss.xml.asp?id=8PLSADEA"><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1271290682/wid/_99522/uiconf_id/1507562"></object>	 
+<param name="flashVars" value="playlistAPI.autoContinue=true&amp;playlistAPI.autoInsert=true&amp;playlistAPI.autoPlay=true&amp;playlistAPI.kpl0Url=http://localhost/html5video_trunk/mwEmbed/modules/KalturaSupport/tests/sample_kalturaRss.xml"><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1271290682/wid/_99522/uiconf_id/1507562"></object>	 
 <!-- 
 <p>
 <object id="kaltura_player"
