--- a/modules/KalturaSupport/tests/FallForward.html
+++ b/modules/KalturaSupport/tests/FallForward.html
@@ -2,7 +2,7 @@
 <head>
 <title>Fall forward html5</title>
   
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>
+<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
 
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
@@ -27,71 +27,22 @@
 <br />
 
 <p>Multiple Playlists</p>
-<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowfullscreen="true" allownetworking="all" allowscriptaccess="always" height="348" width="556" data="http://www.kaltura.com/index.php/kwidget/cache_st/1271290682/wid/_99522/uiconf_id/1507562">
-<param name="allowFullScreen" value="true"><param name="allowNetworking" value="all">
-<param name="allowScriptAccess" value="always"><param name="bgcolor" value="#000000">
-<param name="flashVars" value="playlistAPI.autoContinue=true&amp;playlistAPI.autoInsert=true&amp;playlistAPI.autoPlay=true&amp;playlistAPI.kpl0Url=http://localhost/html5video_trunk/mwEmbed/modules/KalturaSupport/tests/sample_kalturaRss.xml"><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1271290682/wid/_99522/uiconf_id/1507562"></object>	 
-<!-- 
-<p>
-<object id="kaltura_player"
-name="kaltura_player"
-type="application/x-shockwave-flash"
-allowFullScreen="true"
-allowNetworking="all"
-allowScriptAccess="always"
-height="330"
-width="400"
-xmlns:dc="http://purl.org/dc/terms/"
-xmlns:media="http://search.yahoo.com/searchmonkey/media/"
-rel="media:video"
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1278527685/wid/_301982/uiconf_id/48130/entry_id/0_sskv9qe8" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1278527685/wid/_301982/uiconf_id/48130/entry_id/0_sskv9qe8">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&#038;" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1278527685/wid/_301982/uiconf_id/48130/entry_id/0_sskv9qe8" />
-	<a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> <a rel="media:thumbnail" href="http://cdn.kaltura.com/p/301982/sp/30198200/thumbnail/entry_id/0_sskv9qe8/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="Jim_Slater.flv" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /><span property="media:duration" content="{DURATION}" /> 
-</object></p>
- -->
-<!--  
- <p><object id="kaltura_player" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="740" height="330" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280616841/wid/_301982/uiconf_id/1958842" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280616841/wid/_301982/uiconf_id/1958842" /><param name="flashvars" value="&amp;" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="740" height="330" src="http://www.kaltura.com/index.php/kwidget/cache_st/1280616841/wid/_301982/uiconf_id/1958842" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280616841/wid/_301982/uiconf_id/1958842" allowfullscreen="true" name="kaltura_player"></embed></object></p>
-<h2><span style="color: #000080;"><span style="text-decoration: underline;"><strong>SHOOTING DRILLS</strong></span></span></h2>
-<p><object id="kaltura_player" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="740" height="330" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" /><param name="flashvars" value="&amp;" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="740" height="330" src="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280617082/wid/_301982/uiconf_id/1958852" allowfullscreen="true" name="kaltura_player"></embed></object></p>
+<object id="kaltura_player" name="kaltura_player" 
+type="application/x-shockwave-flash" allowFullScreen="true" 
+allowNetworking="all" allowScriptAccess="always" height="330" 
+width="740" xmlns:dc="http://purl.org/dc/terms/" 
+xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
+resource="http://www.kaltura.com/index.php/kwidget/cache_st/1281019392/wid/_301982/uiconf_id/1930002" 
+data="http://www.kaltura.com/index.php/kwidget/cache_st/1281019392/wid/_301982/uiconf_id/1930002">
+<param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" />
+<param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" />
+<param name="flashVars" value="&#038;" />
+<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1281019392/wid/_301982/uiconf_id/1930002" />
 
-<h2><span style="color: #000080;"><span style="text-decoration: underline;"><strong>AGILITY DRILLS</strong></span></span></h2>
-<p><object id="kaltura_player" name="kaltura_player" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="740" height="330" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="name" value="kaltura_player" /><param name="allowfullscreen" value="true" /><param name="data" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" /><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&amp;" /><param name="src" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" /><param name="flashvars" value="&amp;" /><embed id="kaltura_player" type="application/x-shockwave-flash" width="740" height="330" src="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" flashvars="&amp;" bgcolor="#000000" allowscriptaccess="always" allownetworking="all" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280796277/wid/_301982/uiconf_id/1970352" allowfullscreen="true" name="kaltura_player"></embed></object></p>
- <div style="clear:both"></div>
-<h2><span style="text-decoration: underline;"><strong><span style="color: #000080;">TEST SINGLE PLAYLIST</span></strong></span></h2>
-<p><object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="620" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1280865484/wid/_301982/uiconf_id/1978022" data="http://www.kaltura.com/index.php/kwidget/cache_st/1280865484/wid/_301982/uiconf_id/1978022"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="playlistAPI.autoContinue=true&#038;playlistAPI.autoInsert=true&#038;playlistAPI.kpl0Name=L1W1&#038;playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D301982%26subp_id%3D30198200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_2x9nbmro&#038;" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1280865484/wid/_301982/uiconf_id/1978022" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> {SEO} </object></p>
-
- <div style="clear:both"></div>
-<p>
-<object id="kaltura_player" 
-name="kaltura_player" 
-type="application/x-shockwave-flash" 
-allowFullScreen="true" 
-allowNetworking="all" 
-allowScriptAccess="always"
-height="330"
-width="740"
-xmlns:dc="http://purl.org/dc/terms/"
-xmlns:media="http://search.yahoo.com/searchmonkey/media/"
-rel="media:video"
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1278527928/wid/_301982/uiconf_id/1847722"
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1278527928/wid/_301982/uiconf_id/1847722">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all"/>
-	<param name="allowScriptAccess" value="always"/>
-	<param name="bgcolor" value="#000000"/>
-	<param name="flashVars" value="&#038;" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1278527928/wid/_301982/uiconf_id/1847722" />
-	<a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a>  
-</object></p>  
-
-
-<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="740" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1279111658/wid/_243342/uiconf_id/48132" data="http://www.kaltura.com/index.php/kwidget/cache_st/1279111658/wid/_243342/uiconf_id/48132"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="playlistAPI.autoContinue=true&playlistAPI.autoInsert=true&playlistAPI.kpl0Name=Recent Sea Videos&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_ha6mjy1o&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1279111658/wid/_243342/uiconf_id/48132" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a> {SEO} </object>
--->
+<a href="http://corp.kaltura.com">video platform</a> 
+<a href="http://corp.kaltura.com/technology/video_management">video management</a> 
+<a href="http://corp.kaltura.com/solutions/overview">video solutions</a> 
+<a href="http://corp.kaltura.com/technology/video_player">video player</a>  
+</object>
 </body>
 </html>
