added support for autoContinue to kaltura playlist
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@886 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FallForward.html
+++ b/modules/KalturaSupport/tests/FallForward.html
@@ -2,6 +2,16 @@
 <head>
 <title>Fall forward html5</title>
   
+      <script type="text/javascript" src="http://blackboard.kaltura.org/javascript/i18n.js?v=9.0.539.0"></script>        
+         <script type="text/javascript" src="http://blackboard.kaltura.org/javascript/prototype.js?v=9.0.539.0"></script>
+    <script type="text/javascript" src="http://blackboard.kaltura.org/javascript/fastinit.js?v=9.0.539.0"></script>
+    <script type="text/javascript" src="http://blackboard.kaltura.org/javascript/ngui/page.js?v=9.0.539.0"></script>
+
+    <script type="text/javascript" src="http://blackboard.kaltura.org/javascript/date.js?v=9.0.539.0"></script>
+    <script type="text/javascript" src="http://blackboard.kaltura.org/webapps/gradebook/js/gradebookgrid.js?v=9.0.539.0"></script>
+    <script type="text/javascript" src="http://blackboard.kaltura.org/webapps/gradebook/js/gradebookgridmodel.js?v=9.0.539.0"></script>
+
+  
 <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
 
 <!--
@@ -27,22 +37,7 @@
 <br />
 
 <p>Multiple Playlists</p>
-<object id="kaltura_player" name="kaltura_player" 
-type="application/x-shockwave-flash" allowFullScreen="true" 
-allowNetworking="all" allowScriptAccess="always" height="330" 
-width="740" xmlns:dc="http://purl.org/dc/terms/" 
-xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" 
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1281019392/wid/_301982/uiconf_id/1930002" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1281019392/wid/_301982/uiconf_id/1930002">
-<param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" />
-<param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" />
-<param name="flashVars" value="&#038;" />
-<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1281019392/wid/_301982/uiconf_id/1930002" />
+<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="260" width="740" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1282770509/wid/_301982/uiconf_id/2093882" data="http://www.kaltura.com/index.php/kwidget/cache_st/1282770509/wid/_301982/uiconf_id/2093882"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&#038;" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1282770509/wid/_301982/uiconf_id/2093882" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/technology/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/overview">video solutions</a> <a href="http://corp.kaltura.com/technology/video_player">video player</a>  </object><br />
 
-<a href="http://corp.kaltura.com">video platform</a> 
-<a href="http://corp.kaltura.com/technology/video_management">video management</a> 
-<a href="http://corp.kaltura.com/solutions/overview">video solutions</a> 
-<a href="http://corp.kaltura.com/technology/video_player">video player</a>  
-</object>
 </body>
 </html>
