--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -2,22 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Player sources</title>
+
 <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
 </head>
 <body>
 
 
-
-
-
 <video poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream.jpg"
-	 duration="10:53" preload="auto" autoplay>
+	 duration="10:53" preload="auto">
   <source type="video/webm" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.webm" />
   <source type="video/h264" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_iphone.m4v" />
   <source type="video/ogg" src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/elephants-dream_400p.ogv" />
 </video>
-
-
 
 
 </body>
