updated example to use kaltura cdn script host
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@898 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_ServerSideSeek.html
+++ b/modules/EmbedPlayer/tests/Player_ServerSideSeek.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <script type="text/javascript" src="../../../mwEmbed.js"></script>
+    <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
   </head>
   <body>
-    <h2>mwEmbed server side seek</h2>
+    <h2>mwEmbed / archive.org server side seek</h2>
 
     <video poster="http://www.archive.org/download/night_of_the_living_dead/format=Thumbnail&x.jpg"
            style="width:400px;height:300px" durationHint="5717.21">
