--- a/modules/EmbedPlayer/tests/Player_IncludeJQuery.html
+++ b/modules/EmbedPlayer/tests/Player_IncludeJQuery.html
@@ -4,6 +4,7 @@
 <title>Player sources</title>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7/jquery-ui.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.js"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
