--- a/modules/KalturaSupport/tests/DynamicKEntryId.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.html
@@ -3,7 +3,7 @@
 <head>
         <title>Player with native controls</title>
         
-     <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> 
+     <script type="text/javascript" src="../../../mwEmbed.js"></script> 
         <!--
     <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 
         <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
