--- a/modules/KalturaSupport/tests/DynamicKEntryId.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.html
@@ -3,7 +3,7 @@
 <head>
         <title>Player with native controls</title>
         
-     <script type="text/javascript" src="../../../mwEmbed.js"></script> 
+     <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> 
         <!--
     <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script> 
         <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
@@ -11,6 +11,7 @@
 <script type="text/javascript">
 
 mw.ready( function(){
+	$j('#showVideo').attr('disabled', null);
 	mw.setConfig( 'EmbedPlayer.OverlayControls', false );	
 	$j('#showVideo').click( function(){		
 		$j( '#videoContainer' ).loadingSpinner();				
@@ -42,7 +43,7 @@ mw.ready( function(){
 	</span>
 	
 	<div style="clear:both" ></div>
-	<input id="showVideo" type="button" value="Show Video">
+	<input id="showVideo" type="button" value="Show Video" disabled="true">
 	<div id="videoContainer" style="width:400px"> </div>
 </body>
 </html>
