* fix for control display ( show native html5 controls unless player is of type PlayerThemer ) * minor refactor removed doEmbedPlayer in favor of doEmbedHtml
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@924 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/PlayerThemer/tests/Player_AutoThemer.html
+++ b/modules/PlayerThemer/tests/Player_AutoThemer.html
@@ -24,11 +24,8 @@
 		);
 		$j('#cnnCVP1').playerThemer(
 			{
-				// Overide default Interface componets config:: 
-				'components' : {
-	
-				}		
-				// Set playerTheme config documentation forthcoming
+				// Overide any default Interface componets config::				 
+				// Documentation forthcoming
 			}
 		);
 	});
