fixed bug were native video was missing indicator that it was added by mwEmbed
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@928 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/PlayerThemer/tests/Player_AutoThemer.html
+++ b/modules/PlayerThemer/tests/Player_AutoThemer.html
@@ -23,7 +23,7 @@
 			}
 		);
 			
-		$j('#cnnCVP1').playerThemer(
+		$j( '#cnnCVP1' ).playerThemer(
 			{
 				// Overide any default Interface componets config::				 
 				// Documentation forthcoming
@@ -53,7 +53,7 @@
 		* analytics tools ( normalize html5 events across implementations for easy
 			analytics events bindings ) <br />		
 		* And lots of other kaltura and html5 related features / modules 
-			( html5 subtitle timedText,   		
+			( html5 subtitle timedText, etc )  		
 		</span>
 	</div>
 	<div style="width:416px;float:right;">
@@ -66,8 +66,7 @@
 						durationHint="33"
 						 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
 						 src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"					
-						>
-						<img class="playerPoster" height="234" width="416" border="0" alt="" src="http://i2.cdn.turner.com/cnn/2010/images/09/07/ac.tuchman.bachmann.campaign.cnn.416x234.jpg">
+						>						
 					</video>				
 				</div>						
 				<div  class="centerPlayButton cnn_mtt1plybttn" id="cnnCVP2">
@@ -118,17 +117,13 @@
 				</div>
 			</div>
 		</div>
+		
 		<br />
 		<h3>Before binding ( raw html ) </h3>
 		<div class="cnn_relpostn" style="width:416px;height:280px;">
 			<div id="cnnCVP1">
 				<div class="cnn_mtt1img">
-					<video class="PlayerThemer" style="height:234px;width:416px;" 
-						durationHint="33"
-						 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
-						 src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v"					
-						>
-						<img class="playerPoster" height="234" width="416" border="0" alt="" src="http://i2.cdn.turner.com/cnn/2010/images/09/07/ac.tuchman.bachmann.campaign.cnn.416x234.jpg">
+					<img src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg" style="width:416px;height:280px;" >						
 					</video>				
 				</div>						
 				<div  class="centerPlayButton cnn_mtt1plybttn" id="cnnCVP2">
